--- a/main-style.css
+++ b/main-style.css
@@ -3,7 +3,23 @@ main {
     background-color: #181818;
     border-radius: 10px;
     flex-grow: 1;
+    overflow-y: scroll;
 }
+
+.main-sticky {
+    position: sticky;
+    top: 0;
+}
+
+@keyframes main-sticky-anime {
+    from {
+
+    }
+
+    to {
+
+    }
+} 
 
 .main-top{
     display: flex;
@@ -51,9 +67,100 @@ main {
     padding: 8px 4px;
 }
 
+/*  */
+
 .user-btn strong {
     color: #000;
     padding: 5px 7px;
     border-radius: 10em;
     background-color: rgb(0, 255, 89);
+}
+.main-tags ul {
+    margin-left: 15px;
+}
+.main-tags li button {
+    font-size: 15px;
+}
+.main-tags li button:focus{
+    background-color: #fff;
+    color: #000;
+}
+
+/*  */
+
+.wide-main-card-container {
+    display: grid;
+    margin: 15px 2% 0 2%;
+    grid-template-columns: 24.2% 24.2% 24.2% 24.2%;
+    column-gap: 1%;
+    row-gap: 10px
+}
+.wide-main-card-container .wide-card {
+    display: flex;
+    width: 100%;
+    border-radius: 0.3em;
+    height: 50px;
+    background-color: #212121;
+}
+.wide-main-card-container .wide-card:hover {
+    background-color: #3f3f3f;
+}
+.wide-main-card-container img {
+    width: 50px;
+    height: 100%;
+    border-radius: 12% 0 0 12%;
+}
+.wide-main-card-container .card-inner-text {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.wide-main-card-container .card-title {
+    color: #fff;
+    font-size: 14px;
+    margin-bottom: 5px;
+}
+.wide-main-card-container .card-bottom {
+    color: rgb(149, 149, 149);
+    font-size: 12px;
+}
+
+/* Music Playlist Card Section */
+
+.a-type-of-playlist {
+    color: #fff;
+    margin: 20px;
+}
+
+.music-playlist-container {
+    display: grid;
+    grid-gap: var(--grid-gap);
+    grid-auto-rows: -webkit-min-content;
+    grid-auto-rows: min-content;
+    grid-template-columns: repeat(auto-fill, minmax(210px, 1fr));
+    gap:20px;
+}
+
+.a-type-of-playlist h3 {
+    font-size: 20px;
+    margin: 10px 0;
+    max-width: fit-content;
+}
+
+.a-type-of-playlist h3:hover {
+    text-decoration: underline;
+}
+
+.sq-playlist-card{
+    display: flex;
+    flex-direction: column;
+}
+
+.sq-playlist-card img {
+    height:100%;
+    width:100%;
+}
+
+.sq-playlist-card strong {
+    /* margin: 10px 0 0 0; */
 }
